--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,12 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-// IDE
-.idea
-*.iml
 .DS_Store
 target
+
+.idea
+.gradle
+build
+out
+*.iml
+gradle.properties
